@@ -14,7 +14,7 @@
 		<PROPERTY NAME="noWordSep" VALUE="+-*=&gt;&lt;;.?/'"/>
 	</PROPS>
 	<RULES IGNORE_CASE="FALSE" ESCAPE="\" NO_WORD_SEP="+-*=&gt;&lt;;.?/'"
-		HIGHLIGHT_DIGITS="TRUE">
+		HIGHLIGHT_DIGITS="TRUE" DIGIT_RE="-?\d+([./]\d+)?">
 		<EOL_SPAN TYPE="COMMENT2">#!</EOL_SPAN>
 		<EOL_SPAN TYPE="COMMENT1">!</EOL_SPAN>
 
@@ -37,6 +37,15 @@
 		<SEQ_REGEXP TYPE="LITERAL2"
 			HASH_CHAR="C"
 			AT_WORD_START="TRUE">CHAR:\s+(\S+)</SEQ_REGEXP>
+		<SEQ_REGEXP TYPE="LITERAL2"
+			HASH_CHAR="B"
+			AT_WORD_START="TRUE">BIN:\s+(\S+)</SEQ_REGEXP>
+		<SEQ_REGEXP TYPE="LITERAL2"
+			HASH_CHAR="O"
+			AT_WORD_START="TRUE">OCT:\s+(\S+)</SEQ_REGEXP>
+		<SEQ_REGEXP TYPE="LITERAL2"
+			HASH_CHAR="H"
+			AT_WORD_START="TRUE">HEX:\s+(\S+)</SEQ_REGEXP>
 
 		<SPAN TYPE="COMMENT3" DELEGATE="STACK_EFFECT">
 			<BEGIN>( </BEGIN>
